--- a/sampleapp/service.yaml
+++ b/sampleapp/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pywebapp
+  name: Busybox
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
-    app: pywebapp
+    app: Busybox
   ports:
   - name: http
     protocol: TCP
-    port: 8080
-    targetPort: 8080
+    port: 3000
+    targetPort: 3000
