--- a/sampleapp/pods.yaml
+++ b/sampleapp/pods.yaml
@@ -1,21 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Busybox
+  name: pywebapp
   labels:
-    app: Busybox
+    app: pywebapp
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: Busybox
+      app: pywebapp
   template:
     metadata:
       labels:
-        app: Busybox
+        app: pywebapp
     spec:
       containers:
-      - name: nginx:latest
-        image: busybox
+      - name: pywebapp
+        image: nginx:latest
         ports:
-        - containerPort: 3000
+        - containerPort: 8080
+        resources:
+          requests:
+            memory: "100M"
+            cpu: "100m"
+          limits:
+            memory: "200M"
+            cpu: "200m"
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 20
