--- a/sampleapp/service.yaml
+++ b/sampleapp/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: Busybox
+  name: pywebapp
 spec:
-  type: ClusterIP
+  type: clusterIP
   selector:
-    app: Busybox
+    app: pywebapp
   ports:
   - name: http
     protocol: TCP
-    port: 3000
-    targetPort: 3000
+    port: 8080
+    targetPort: 8080
