--- a/sampleapp/service.yaml
+++ b/sampleapp/service.yaml
@@ -8,7 +8,6 @@ spec:
     app: pywebapp
   ports:
   - name: http
-    port: 80
-    protocol: https
-    port: 443
+    protocol: TCP
+    port: 8080
     targetPort: 8080
